# data-engineering-zoomcamp-2026

./: .gitignore  README.md  parquet
pipeline/: Dockerfile  docker-compose.yaml  ingest_data.py  notebook.ipynb  notebook.py  pipeline.py  pyproject.toml
